[gd_scene load_steps=11 format=2]

[ext_resource path="res://Character models/Enemies/Cyan_square.png" type="Texture" id=1]
[ext_resource path="res://Source/Actors/square.gd" type="Script" id=2]
[ext_resource path="res://Character models/World/Left spikes.png" type="Texture" id=3]
[ext_resource path="res://Character models/Enemies/Purple_square.png" type="Texture" id=4]
[ext_resource path="res://Character models/Enemies/Red_square.png" type="Texture" id=5]
[ext_resource path="res://Character models/Enemies/Yellow_square.png" type="Texture" id=6]
[ext_resource path="res://Character models/World/Right spikes.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "cyan",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "purple",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "red",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "yellow",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 31, 1 )

[node name="square" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )

[node name="square_sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -32 )
frames = SubResource( 1 )
animation = "cyan"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -32 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="Left spikes" type="Sprite" parent="."]
position = Vector2( -34, -32 )
texture = ExtResource( 3 )

[node name="Right spikes" type="Sprite" parent="."]
position = Vector2( 34, -32 )
texture = ExtResource( 7 )
[connection signal="body_entered" from="Area2D" to="." method="_on_tileMap_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_tileMap_body_exited"]
